fix: fix header styling on narrow/mobile viewports

--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -2,12 +2,14 @@
   align-items: center;
   background-color: var(--color-tertiary);
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: var(--space-s);
   margin-bottom: var(--space-m);
   padding: var(--space-m);
   width: 100%;
   @include media(tabletAndUp) {
+    flex-direction: row;
+    justify-content: space-between;
     padding: var(--space-m) var(--space-xxxxl);
   }
 
